[tool.poetry]
name = "onecache"
version = "0.7.0"
description = "Python cache for sync and async code"
authors = ["Johanderson Mogollon <johander1822@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# packages = [{include = "onecache"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[tool.poetry.group.test.dependencies]
flake8 =  {version= "^7.1.0", python = ">=3.8.1"}
flake8-docstrings = "^1.7.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-sugar = "^1.0.0"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = {version="^2.3.1", python=">=3.8"}
sphinx = {version= "^8.0.2", python = ">=3.10"}
pylint = {version="^3.2.6", python=">=3.8"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
